# mp1

./: CMakeLists.txt  README.md  results.txt
cpu/: exhaustivelooporder.cpp  gemm_cpu.cpp
extras/: exhaustive.cu  exhaustivelooporder.cpp
gpu/: gemm_gpu.cu
report/: mp1-report-structure.docx  ~$1-report-structure.docx
